<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayoutFragment">
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/linear_title"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="@string/input_placeholder"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_title"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:src="@drawable/double_helix_svgrepo_com" />
</LinearLayout>