<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutFragment">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/relative_title"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="@string/input_placeholder"
        android:layout_below="@+id/text"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_title"
        android:layout_below="@+id/input"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/genetic_data_svgrepo_com"
        android:layout_below="@+id/button"/>

</RelativeLayout>